Fixed searchbar on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -217,6 +217,10 @@ h5[id]:before {
     border-color: rgba(0,0,0,0.25) !important;
 }
 
+/* Fixes */
+.td-sidebar {
+    z-index: 100;
+}
 
 
 /* Scrollbar */
